main.css
@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap');

body {
    font-family: "Playpen Sans", cursive !important;
    display: flex;
    flex-direction: column;
    height: 100vh;
}

header {
    flex: 0 80px;
    background-color: rgb(108, 177, 237);
}

menu {
    flex: 1;
    display: flex;
    flex-direction: row !important;
    list-style: none;
}

menu .nav-item {
  padding: 0 0.3em;
}

.navbar .nav-link.active {
    color: #fff
}

.navbar .nav-link {
    color: #fff
}

.navbar .nav-link:hover {
    color: #f0f0f0
}

main {
    flex:1;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
}

.row-main {
    flex: 1;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 100px;
}

.picture{
  padding: 0.5em;
  background: rgb(108, 177, 237);
  border-radius: 5px;
}

.title {
    font-weight: bold;
}

footer {
    flex: 0 30px;
    background-color: rgb(108, 177, 237);
}

footer a {
  float: right;
}

@media (max-height: 600px) {
  header {
    display: none;
  }
  footer {
    display: none;
  }
  main {
    flex: 1 100vh;
  }
}

